--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "@mui/styled-engine": "^6.1.10",
     "mui": "^0.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
